fixed scrollbar issue for puzzle page preview ims

--- a/src/views/PuzzleList/PuzzleList.styl
+++ b/src/views/PuzzleList/PuzzleList.styl
@@ -41,6 +41,14 @@
     .MiniGoban {
         height: 64px;
         width: 64px;
+        margin-top: 0.4rem;
+        margin-bottom: -0.6rem;
+        overflow: visible;
+
+        .inner-container {
+            position: absolute;
+            overflow: visible;
+        }
     }
     .icon {
         padding: 0.2rem;
